change code because of image files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> PORTFOLIO </h1>
     <!-- 프로필 -->
     <div id="profile">
-        <img id="profileImage" class="image" src="../../img/profile.svg" alt="">
+        <img id="profileImage" class="image" src="profile.svg" alt="">
         <p id="pfDescription">
             안녕하세요. 개발자 문승은입니다.
         </p>
@@ -25,7 +25,7 @@
     <h2>TEAM PROJECT</h2>
     <div id="teamProject">
         <div class="divDescription">
-            <img class="image" src="../../img/project-1.png" alt="">
+            <img class="image" src="project-1.png" alt="">
             <div class="btnAnd">
                 <input class="btn" type="button" value="사이트 들어가기">
                 <ul>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="divDescription">
-            <img class="image" src="../../img/project-2.png" alt="">
+            <img class="image" src="project-2.png" alt="">
             <div class="btnAnd">
                 <input class="btn" type="button" value="사이트 들어가기">
                 <ul>
@@ -52,7 +52,7 @@
     <h2>PERSONAL PROJECT</h2>
     <div id="personalProject">
         <div class="divDescription">
-            <img class="image" src="../../img/project-3.png" alt="">
+            <img class="image" src="project-3.png" alt="">
             <div class="btnAnd">
                 <input class="btn" type="button" value="사이트 들어가기">
                 <ul>
