solved project4 image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="divDescription">
-            <img class="image" src="../../img/project-4.png" alt="">
+            <img class="image" src="project-4.png" alt="">
             <div class="btnAnd">
                 <input class="btn" type="button" value="사이트 들어가기">
                 <ul>
